# Algos_I_sem

./: README.md
Contest_09.10.21/: TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp  TaskF.cpp  TaskG.cpp
Contest_20.11.23/: TaskA  TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp
Contest_20.11.23/TaskA.dSYM/Contents/: Info.plist
Contest_20.11.23/TaskA.dSYM/Contents/Resources/DWARF/: TaskA
Contest_23.10.23/: TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp  TaskF.cpp  TaskG.cpp  my_program
HW1/: ДЗ 1 алго (сортировка пузырьком).cpp  ДЗ 1 алго (сортировка пузырьком).md
HW2/: HW2.1.cpp  HW2.2.cpp
HW3/: CMakeLists.txt  Merge_IntrCount_task3.cpp  main.cpp  merge+insertion_task2.cpp  merge_sort_task1.cpp
HW4/: LSD&MSD_Radix_sorts.cpp
HW4/Task4 (Last)/: Addons.hpp  main.cpp
HW5/: 2 types of Radix for string sorting.cpp  Task1.cpp  Task2.cpp  Task3.cpp
Linked List/: linked.cpp
Sorts_Google_Tests/: CMakeLists.txt  main  main.cpp
Sorts_Google_Tests/Google_tests/: ALL_Tests.cpp  CMakeLists.txt
Sorts_Google_Tests/SortingAlgos_lib/: CMakeLists.txt  Radix_MSD_VS_std_sort.cpp  Radix_MSD_VS_std_sort.h
